import org.apache.tools.ant.taskdefs.condition.Os
import org.openapitools.generator.gradle.plugin.tasks.GenerateTask

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.3'

    id 'org.openapi.generator' version '7.4.0'

    id 'jacoco'

    id "org.sonarqube" version "5.0.0.4638"
}

jacoco {
    toolVersion = "0.8.11"
}

sonarqube {
    properties {
        property "sonar.java.source", "21"
        property "sonar.java.target", "21"
    }
} 

repositories {
maven {
    url 'https://repo.osgeo.org/repository/release/'
}
mavenLocal()

    mavenCentral()
}

java {
    group = 'app.bpartners.api'
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

task generateJavaClient(type: GenerateTask) {
    generatorName = "java"
    inputSpec = "$rootDir/doc/api.yml".toString()
    outputDir = "$buildDir/gen".toString()
    apiPackage = "app.bpartners.api.endpoint.rest.api"
    invokerPackage = "app.bpartners.api.endpoint.rest.client"
    modelPackage = "app.bpartners.api.endpoint.rest.model"

    configOptions = [
            serializableModel: "true",
            serializationLibrary: "jackson",
            dateLibrary: "custom"
    ]
    typeMappings = [
            // What date-time type to use when? https://i.stack.imgur.com/QPhGW.png
            Date: "java.time.LocalDate",
            DateTime: "java.time.Instant",
    ]
    library = "native"

    groupId = 'app.bpartners'
    id = 'bpartners-gen'
    skipValidateSpec = false
    logToStderr = true
    generateAliasAsModel = false
    enablePostProcessFile = false
}
task generateTsClient(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
    generatorName = "typescript-axios"
    inputSpec = "$rootDir/doc/api.yml".toString()
    outputDir = "$buildDir/gen-ts".toString()
    typeMappings = [
            Date    : "Date",
            DateTime: "Date",
    ]
    additionalProperties = [
            enumPropertyNaming: "original",
            npmName           : "@bpartners/typescript-client",
            npmVersion        : project.properties["args"] ?: "latest"
    ]
}
task publishJavaClientToMavenLocal(type: Exec, dependsOn: generateJavaClient) {
    if (Os.isFamily(Os.FAMILY_WINDOWS)){
        commandLine './.shell/publish_gen_to_maven_local.bat'
    } else {
        commandLine './.shell/publish_gen_to_maven_local.sh'
    }
}
tasks.compileJava.dependsOn publishJavaClientToMavenLocal


test {
    minHeapSize = "512m"
    maxHeapSize = "2g"
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
    useJUnitPlatform()
    finalizedBy jacocoTestCoverageVerification
}

if (project.hasProperty("skipTests") && project.getProperty("skipTests") == "true") {
    tasks.named("test").configure {
        enabled = false
    }
}

jacocoTestCoverageVerification {
    dependsOn test
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/gen/**"
            ])
        }))
    }
    violationRules {
        rule {
            limit {
                counter = "LINE"
                minimum = 0.4
            }
        }
    }
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        // Need to be duplicated like this from jacocoTestCoverageVerification,
        // else display coverageRate is inconsistent with what was computed during coverage...
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/gen/**"
            ])
        }))
    }
    doLast {
        def coverageReportFile = file("$buildDir/reports/jacoco/test/jacocoTestReport.xml")

        if (coverageReportFile.exists()) {
            def xmlParser = new XmlParser()
            xmlParser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false)
            xmlParser.setFeature("http://apache.org/xml/features/disallow-doctype-decl", false)

            def xml = xmlParser.parse(coverageReportFile)

            def totalLines = xml.'counter'.find { it.@type == 'LINE' }.@missed.toInteger() + xml.'counter'.find { it.@type == 'LINE' }.@covered.toInteger()
            def coveredLines = xml.'counter'.find { it.@type == 'LINE' }.@covered.toInteger()
            def coverageRate = coveredLines / totalLines.toDouble() * 100

            println "Total Line Coverage Rate: ${coverageRate.round(2)}%"
        } else {
            println "No JaCoCo coverage report found. Make sure you run 'gradle test jacocoTestReport' first."
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core'
    testImplementation 'org.testcontainers:postgresql:1.19.4'
    implementation 'org.postgresql:postgresql'
    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects:6.4.3.Final'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    implementation 'com.amazonaws.serverless:aws-serverless-java-container-springboot3:2.0.0-M2'
    implementation 'software.amazon.awssdk:aws-query-protocol:2.20.26'

    implementation 'com.amazonaws:aws-lambda-java-core:1.2.3'
    implementation 'com.amazonaws:aws-lambda-java-events:3.11.3'
    implementation 'software.amazon.awssdk:sqs:2.21.40'
    implementation 'software.amazon.awssdk:eventbridge:2.21.40'
    implementation 'software.amazon.awssdk:s3:2.21.40'
    implementation 'software.amazon.awssdk:s3-transfer-manager:2.21.40'
    implementation 'software.amazon.awssdk.crt:aws-crt:0.28.12'
    implementation 'software.amazon.awssdk:ses:2.21.40'
    implementation 'software.amazon.awssdk:core:2.21.40'

    implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
    implementation 'jakarta.activation:jakarta.activation-api:2.1.2'
    implementation 'com.sun.mail:jakarta.mail:2.0.1'
    implementation 'com.sun.activation:jakarta.activation:2.0.1'

    implementation 'org.apache.tika:tika-core:2.9.1'

    implementation 'org.reflections:reflections:0.10.2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
    implementation 'io.swagger:swagger-annotations:1.6.12'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.1'
    testImplementation 'org.junit-pioneer:junit-pioneer:2.2.0'


    implementation 'io.sentry:sentry-logback:7.6.0'
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.4.0'
    implementation 'com.google.api-client:google-api-client:2.2.0'
implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
implementation 'app.bpartners:bpartners-gen:latest'
implementation 'org.springframework.boot:spring-boot-starter-security'
implementation 'org.springframework.boot:spring-boot-starter-validation'
implementation 'com.sendinblue:sib-api-v3-sdk:6.0.0'
implementation 'com.nimbusds:nimbus-jose-jwt:9.37'
implementation 'software.amazon.awssdk:cognitoidentityprovider:2.17.109'
implementation 'software.amazon.awssdk:ssm:2.17.109'
implementation 'software.amazon.awssdk:transfer:2.17.271'
implementation 'software.amazon.awssdk:protocol-core:2.17.292'
implementation 'software.amazon.awssdk:sns:2.20.153'
implementation 'org.springframework.retry:spring-retry:1.3.1'
implementation 'org.apache.tika:tika-core:1.18'
implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
implementation 'org.xhtmlrenderer:flying-saucer-pdf:9.1.22'
implementation 'com.google.zxing:core:3.5.0'
implementation 'com.google.zxing:javase:3.5.0'
implementation 'jakarta.mail:jakarta.mail-api:2.1.0'
implementation 'com.sun.mail:jakarta.mail:1.6.5'
implementation 'org.apfloat:apfloat:1.10.1'
implementation 'org.apache.poi:poi:3.12'
implementation 'org.apache.poi:poi-ooxml:3.12'
implementation 'org.jsoup:jsoup:1.15.3'
testImplementation 'org.mockito:mockito-inline:4.6.1'
testImplementation 'org.springframework.security:spring-security-test'
implementation 'org.testcontainers:localstack:1.20.1'
implementation 'javax.activation:activation:1.1.1'
implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.3'
implementation 'org.geotools:gt-geojson:31.0'
implementation 'com.google.maps:google-maps-services:2.2.0'
implementation "com.stripe:stripe-java:28.0.1"
implementation 'com.github.librepdf:openpdf:1.3.32'
implementation 'io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.31'
implementation 'io.github.openhtmltopdf:openhtmltopdf-svg-support:1.1.31'
implementation 'net.coobird:thumbnailator:0.4.14'


}